--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     </nav>
 
     <script src="assets/js/app.js" type="module" async></script>
+        <script src="assets/js/home.js" type="module" async></script>
     <script src="assets/js/smtp.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js" defer></script>
 
