Update Swiper CSS cdn

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <link rel="mask-icon" href="assets/images/mask-icon.svg" color="#fff">
     <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
     <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="preload" href="assets/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="assets/fonts/atkinson-hyperlegible-regular-102-webfont.woff2" as="font"
         onload="this.onload=null;this.rel='font/woff2'" crossorigin>
+    <link rel="stylesheet" href="https://unpkg.com/swiper@6.5.0/swiper-bundle.min.css"/>
     <title>KCC App- 🌻Kilmacow Community Cleanup🌻</title>
 </head>
 
