--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 </head>
 
 <body>
+<!-- Acknowledgement - Accessibility for screen readers, opening links in new tabs - 
+Scott Vinkle 13/04/2018 https://medium.com/@svinkle/why-let-someone-know-when-a-link-opens-a-new-window-8699d20ed3b1 -->
+<div hidden>
+    <span id="new-window-message"> - opens in a new window</span>
+</div>
 
     <main>
 
