--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#ffffff">
     <link onload="this.rel='stylesheet'" rel="preload" as="style" href="assets/css/appshell.css" media="all" />
     <link rel="icon" href="assets/images/favicon.svg">
-    <link rel="mask-icon" href="assets/images/mask-icon.svg" color="#fff">
+    <link rel="mask-icon" href="assets/images/apple-mask-icon.svg" color="#fff">
     <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
     <link rel="manifest" href="manifest.json">
     <link rel="preload" href="assets/css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
