Add meta tags to HEAD

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         onload="this.onload=null;this.rel='font/woff2'" crossorigin>
     <link rel="stylesheet" href="https://unpkg.com/swiper@6.5.0/swiper-bundle.min.css"/>
     <title>KCC App- 🌻Kilmacow Community Cleanup🌻</title>
+    <title>KCC App- 🌻Kilmacow Community Cleanup🌻</title>
+    <meta name="title" content="KCC App- 🌻Kilmacow Community Cleanup🌻">
+    <meta name="description" content="Web app for KCC members to report litter issues in the community">
 </head>
 
 <body>
